<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_settings">

        <EditTextPreference
            app:key="username"
            app:title="@string/username"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:key="user_age"
            app:title="@string/age"
            app:useSimpleSummaryProvider="true"
            />
        <EditTextPreference
            android:key="user_weight"
            app:title="@string/weight_person"
            app:useSimpleSummaryProvider="true"
             />
        <EditTextPreference
            android:key="user_height"
            app:title="@string/height_person"
            app:useSimpleSummaryProvider="true"
            />

    </PreferenceCategory>
    <SwitchPreference
        android:defaultValue="false"
        android:key="voice"
        android:title="@string/count_voice" />

</PreferenceScreen>